--- a/style.css
+++ b/style.css
@@ -1,194 +1,97 @@
- html {
-        scroll-behavior: smooth;
-      }
-      #nav {
-        background-color: #555559;
-        color: white;
-        padding: 35px;
-        text-align: center;
-        height: 100px;
-        font-size: 25px;
-        width: 100%;
-        margin-top: -20px;
-        position: fixed;
-        z-index: 1000px;
-      }
-      #nav a {
-        padding: 30px;
-      }
 
-      #nav a:hover {
-        opacity: 0.7;
-        background-color: grey;
-        border-radius: 5px;
-      }
+body {
+  padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
 
-      #FirtsSec {
-        background: white;
-        height: 900px;
-        margin-bottom: 100px;
-        font-size: 20px;
-      }
+a {
+  color: inherit;
+  text-decoration: none;
+}
 
-      #FirtsSec img:hover {
-        transform: scale(1.2);
-        transition: transform 0.5s ease;
-      }
+* {
+  box-sizing: border-box;
+}
 
-      #FirtsSec button {
-        background-color: black;
-        color: white;
-        border-radius: 55px;
-        border: none;
-        width: 250px;
-        height: 50px;
-        font-size: 20px;
-      }
+main {
+  min-height: 100vh;
+  padding: 4rem 2rem;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
-      #FirtsSec button:hover {
-        transform: scale(1.2);
-        transition: transform 0.5s ease;
-      }
+.title {
+  margin: 0;
+  line-height: 1.15;
+  font-size: 4rem;
+}
 
-      #SecondSec {
-        background: #e8e8e8;
-        height: 900px;
-        padding-top: 100px;
-      }
+.title,
+.description {
+  text-align: center;
+}
 
-      #ThirdSec {
-        background: #d6d6d6;
-        height: 900px;
-        padding-top: 100px;
-      }
+.description {
+  margin: 4rem 0;
+  line-height: 1.5;
+  font-size: 1.5rem;
+}
 
-      #ThirdSec input {
-        border-radius: 5px;
-        border: none;
-        text-decoration: none;
-        width: 500px;
-        height: 40px;
-        font-size: 15px;
-        box-shadow: 10px 5px 5px #787373;
-        display: flex;
-        margin: 15px;
-      }
+.code {
+  background: #fafafa;
+  border-radius: 5px;
+  padding: 0.75rem;
+  font-size: 1.1rem;
+  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
+    Bitstream Vera Sans Mono, Courier New, monospace;
+}
 
-      #ThirdSec textarea {
-        font-size: 15px;
-        border: none;
-        border-radius: 10px;
-        margin: 20px;
-        width: 500px;
-        height: 100px;
-        box-shadow: 10px 5px 5px #787373;
-        display: flex;
-      }
+.grid {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  max-width: 800px;
+}
 
-      #ThirdSec button {
-        background-color: #2b2b2b;
-        border: none;
-        border-radius: 10px;
-        color: white;
-        padding: 20px;
-        width: 500px;
-        box-shadow: 10px 5px 5px #787373;
-        cursor: pointer;
-      }
+.card {
+  margin: 1rem;
+  padding: 1.5rem;
+  text-align: left;
+  color: inherit;
+  text-decoration: none;
+  border: 1px solid #eaeaea;
+  border-radius: 10px;
+  transition: color 0.15s ease, border-color 0.15s ease;
+  max-width: 300px;
+}
 
-      #ThirdSec button:hover {
-        transform: scale(1.1);
-        transition: transform 0.5s ease;
-      }
+.card:hover,
+.card:focus,
+.card:active {
+  color: #0070f3;
+  border-color: #0070f3;
+}
 
-      .Secao {
-        height: 900px;
-        padding-top: 100px;
-      }
+.card h2 {
+  margin: 0 0 1rem 0;
+  font-size: 1.5rem;
+}
 
-      .Portofolio {
-        background-color: white;
-        border-radius: 10px;
-        width: 400px;
-        height: 250px;
-        padding: 10px;
-        display: inline-block;
-        box-shadow: 10px 5px 5px #787373;
-        margin: 10px;
-        font-size: 20px;
-      }
+.card p {
+  margin: 0;
+  font-size: 1.25rem;
+  line-height: 1.5;
+}
 
-      .Portofolio a {
-        background-color: black;
-        color: white;
-        border-radius: 5px;
-        padding: 10px;
-      }
-
-      .Portofolio a:hover {
-        opacity: 0.7;
-        transition: 0, 5s;
-        transform: 0, 5s;
-      }
-
-      .Loja {
-        background-color: white;
-        border-radius: 10px;
-        width: 400px;
-        height: 250px;
-        padding: 10px;
-        display: inline-block;
-        margin: 20px;
-        box-shadow: 10px 5px 5px #787373;
-        font-size: 20px;
-      }
-
-      .Loja a {
-        background-color: black;
-        color: white;
-        border-radius: 5px;
-        padding: 10px;
-      }
-
-      .Loja a:hover {
-        opacity: 0.7;
-        transition: 0, 5s;
-        transform: 0, 5s;
-      }
-
-      .Dashboard {
-        background-color: white;
-        border-radius: 10px;
-        width: 400px;
-        height: 250px;
-        padding: 10px;
-        display: inline-block;
-        margin: 20px;
-        box-shadow: 10px 5px 5px #787373;
-        font-size: 20px;
-      }
-
-      .Dashboard a {
-        background-color: black;
-        color: white;
-        border-radius: 5px;
-        padding: 10px;
-      }
-
-      .Dashboard a:hover {
-        opacity: 0.7;
-        transition: 0, 5s;
-        transform: 0, 5s;
-      }
-      .Net a {
-        display: inline-block;
-        padding: 20px;
-        font-size: 20px;
-        
-      }
-      .Net a:hover {
-        transform: scale(1.5);
-        transition: transform 0.5s ;
-         opacity: 0.7;
-        
-      }
+@media (max-width: 600px) {
+  .grid {
+    width: 100%;
+    flex-direction: column;
+  }
+}
